2006-09-29  Mats Cronqvist  <locmacr@mwlx084>

	* sherk*: sherk basically works. tree-view not yet implemented.

	* gtknode.erl: exported the cmd/2,3 functions. a function api for
	message sending to the cnode

2006-09-22  Mats Cronqvist  <locmacr@mwlx084>

	* sherk.erl: fixed the call window combobox
	* sherk_tab.erl: fixed bugs on cache file handling

2006-09-21  Mats Cronqvist  <locmacr@mwlx084>

	* src/gtknode.erl:   fixed up the gtknode:debug/0,1,2 functions

2006-09-20  Mats Cronqvist  <locmacr@mwlx084>

	* c_src/gtknode_glade.c:  gn_erl is an alias for gn_sighandler
	* priv/examples:  fixed up the examples
	* configure.ac: took some suggestions from lenglet
	* sherk: the sherk example mostly works ;>
	
2006-09-19  Mats Cronqvist  <locmacr@mwlx084>

	* c_src/gtknode_glade.c:
	signals from the c-node now looks like {GUI,{signal,{Widget,Signal}}}
	* c_src/gtknode_internal.c:
	implemented GN_tree_view_get_selected (returns a list of path strings)
	* priv/generator/generator.erl:
	the generator now generates pretty useful documentation
	* src/gtknode.erl:
	implemented gtknode:f/2,3 for interactive use from the shell

2006-09-04  Mats Cronqvist  <locmacr@mwlx084>

	* priv/examples/top/top.erl: 
	ported to new GValue/GType implementation
	
2006-08-29  Mats Cronqvist  <locmacr@mwlx084>

	* gtknode_marshal.c: 
	put_string handles NULL pointer. coded as "".
	Gvalue handling moved to GN_value_{get,set,unset}
	list(string|integer|float) are decoded to GType*
		
2006-01-26  Romain Lenglet  <rlenglet@users.forge.objectweb.org>

	* src/get_inc_path priv/generator/src/get_inc_path: reimplemented
	in bash instead of tcsh, so that all scripts only depend on bash

	* src/check_otp: redevelopped using Erlang's code:root_dir/0 and
	code:lib_dir/1; now works all the time, including when the "erl"
	command in the PATH is not in the Erlang installation hierarchy (e.g.
	on Debian, erl is in /usr/bin, whereas the Erlang root is
	/usr/lib/erlang)
